# pyshockflow

./: .gitignore  README.md  environment.yml  main.py  nozzle.csv  pyproject.toml
regression/: test_cases.py
regression/mesh_refinement/: log_test.txt
regression/nonideal_CO2/: log_test.txt
regression/nozzle_steady/: log_test.txt
regression/sod_test_godunov/: log_test.txt
regression/sod_test_roe/: log_test.txt
regression/thruster/: log_test.txt  main.py
src/fluid_properties/: coolprop_interface.py  fluid_properties.py
src/pyshockflow/: config.py  driver.py  fluid.py  output.py  plot_styles.py  post_processing.py  riemann_problem.py  visualization.py
src/thermoplot/: __init__.py  configthermoplot.py  isolines.py  thermoplot.py
test/regression_tests/: test_cases.py
test/tests_two_phase/: README.md
test/unit_tests/: test_fluid_ideal.py  test_fluid_real.py
testcases/FAST_RSW/: input.ini
testcases/flux_limiters/: input_1stOrder.ini  input_minmod.ini  input_superbee.ini  input_vanalbada.ini  input_vanleer.ini
testcases/make_animations/: Results.pik  make_video.py
testcases/mesh_refinement/: input_normal.ini
testcases/nonideal_C02/: input_ideal_standard.ini  input_ideal_vinokur.ini  input_real_arabi.ini  input_real_vinokur.ini
testcases/nozzle_steady/: README.md  input_45kPa.ini  input_75kPa.ini  input_90kPa.ini  input_94kPa.ini  input_97kPa.ini  main.py  plot_results.py  postprocess.py  temp.py  write_nozzle.py
testcases/nozzle_steady_two_phase/: input.ini  main.py  nozzle.csv  plot_nozzle_geometry.py  plot_results.py  postprocess.py  temp.py
(+83 files in other folders)
